enhancement: '{speech_recognition}' smarty function allows to easily insert speech recognition buttons into forms

--- a/css/less/button.less
+++ b/css/less/button.less
@@ -217,3 +217,15 @@ i.lms-ui-button-clipboard:hover {
     .lms-ui-icon-copy;
   }
 }
+
+a.lms-ui-button:not(.lms-ui-link-button).lms-ui-button-speech-recognition.active {
+  .fa-beat;
+  > i:before {
+    color: red;
+  }
+}
+
+.lms-ui-util-buttons {
+  display: flex;
+  flex-direction: column;
+}
