--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1924,3 +1924,71 @@
     content: @fa-var-map-marked-alt;
   }
 }
+
+.lms-ui-icon-microphone,
+.lms-ui-icon-mic {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-microphone;
+  }
+}
+
+@keyframes fa-beat {
+  0% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(1.25);
+  }
+  10% {
+    transform: scale(1.5);
+  }
+  15% {
+    transform: scale(1.25);
+  }
+  20% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(1.25);
+  }
+  35% {
+    transform: scale(1.5);
+  }
+  40% {
+    transform: scale(1.25);
+  }
+  45% {
+    transform: scale(1);
+  }
+  55% {
+    transform: scale(1.25);
+  }
+  60% {
+    transform: scale(1.5);
+  }
+  65% {
+    transform: scale(1.25);
+  }
+  70% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.25);
+  }
+  80% {
+    transform: scale(1.5);
+  }
+  85% {
+    transform: scale(1.25);
+  }
+  90% {
+    transform: scale(1);
+  }
+}
+
+.fa-beat {
+  animation:fa-beat 5s ease infinite;
+}
