enhancement: '{speech_recognition}' smarty function allows to easily insert speech recognition buttons into forms

--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -582,12 +582,12 @@
 			</td>
 			<td>
 				<div class="valign-middle">
-					<textarea name="message[mailbody]" id="mailbody-text" cols="80" rows="20"
-						{tip class="lms-ui-wysiwyg-editor" trigger="mailbody"}
+					<textarea name="message[mailbody]" id="mailtext" cols="80" rows="20"
+						{tip class="lms-ui-wysiwyg-editor" trigger="mailtext"}
 						{if isset($message.wysiwyg.mailbody)} data-wysiwyg="{$message.wysiwyg.mailbody}"{/if}>{$message.body}</textarea>
 					<div class="lms-ui-util-buttons">
 						{hint content=$body_hint}
-						{speech_recognition target="#mailbody-text"}
+						{speech_recognition target="#mailtext"}
 					</div>
 				</div>
 			</td>
@@ -602,9 +602,12 @@
 			<td>
 				<div class="valign-middle">
 					<textarea name="message[smsbody]" id="smstext" cols="60" rows="5" onkeydown="countChars(this)"
-						onkeyup="countChars(this)" {tip trigger="smsbody"}
+						onkeyup="countChars(this)" {tip trigger="smstext"}
 						>{$message.body}</textarea>
-					{hint content=$body_hint}
+					<div class="lms-ui-util-buttons">
+						{hint content=$body_hint}
+						{speech_recognition target="#smstext"}
+					</div>
 				</div>
 			</td>
 		</tr>
