enhancement: '{speech_recognition}' in helpdesk forms

--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -583,7 +583,7 @@
 			<td>
 				<div class="valign-middle">
 					<textarea name="message[mailbody]" id="mailtext" cols="80" rows="20"
-						{tip class="lms-ui-wysiwyg-editor" trigger="mailtext"}
+						{tip class="lms-ui-wysiwyg-editor" trigger="mailbody"}
 						{if isset($message.wysiwyg.mailbody)} data-wysiwyg="{$message.wysiwyg.mailbody}"{/if}>{$message.body}</textarea>
 					<div class="lms-ui-util-buttons">
 						{hint content=$body_hint}
@@ -602,7 +602,7 @@
 			<td>
 				<div class="valign-middle">
 					<textarea name="message[smsbody]" id="smstext" cols="60" rows="5" onkeydown="countChars(this)"
-						onkeyup="countChars(this)" {tip trigger="smstext"}
+						onkeyup="countChars(this)" {tip trigger="smsbody"}
 						>{$message.body}</textarea>
 					<div class="lms-ui-util-buttons">
 						{hint content=$body_hint}
