--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -111,10 +111,13 @@
 
 			{block name="rtticketadd-content"}
 			{box_row icon="message" label="Content:" icon_class="fa-fw"}
-				<TEXTAREA name="ticket[body]" cols="50" rows="5"
-					{tip class="lms-ui-wysiwyg-editor lms-ui-helpdesk" text="Enter ticket content" trigger="body"}
-					{if isset($ticket.wysiwyg.body)} data-wysiwyg="{$ticket.wysiwyg.body}"{/if}
-					>{$ticket.body}</TEXTAREA>
+				<div class="valign-middle">
+					<textarea name="ticket[body]" id="ticket-body" cols="50" rows="5"
+						{tip class="lms-ui-wysiwyg-editor lms-ui-helpdesk" text="Enter ticket content" trigger="body"}
+						{if isset($ticket.wysiwyg.body)} data-wysiwyg="{$ticket.wysiwyg.body}"{/if}
+						>{$ticket.body}</textarea>
+					{speech_recognition target="#ticket-body"}
+				</div>
 			{/box_row}
 			{/block}
 
