bugfix: fixed typo

--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -132,7 +132,7 @@
 					<textarea name="ticket[note]" id="ticket-note" cols="50" rows="5"
 						{tip text="Enter ticket content" trigger="body"}
 						>{$ticket.note}</textarea>
-					{speech_recognition target="#ticket-node"}
+					{speech_recognition target="#ticket-note"}
 				</div>
 			{/box_row}
 
