--- a/templates/default/node/nodeedit.html
+++ b/templates/default/node/nodeedit.html
@@ -46,6 +46,13 @@
 {block name="customerdevices"}
 	{include file="customer/customerdevices.html"}
 {/block}
+{block name="customercallbox"}
+	{if ConfigHelper::checkPrivilege('readonly')
+		|| ConfigHelper::checkPrivilege('customer_call_view')
+		|| ConfigHelper::checkPrivilege('customer_call_management')}
+		{include file="customer/customercallbox.html" limit=ConfigHelper::getConfig('phpui.customer_call_limit', 5)}
+	{/if}
+{/block}
 {block name="customerdocuments"}
 	{include file="customer/customerdocuments.html" limit=10}
 {/block}
