enhancement: customer call archive support added (improvements, cleanups)

--- a/css/templates/customer/customercallbox.less
+++ b/css/templates/customer/customercallbox.less
@@ -33,22 +33,26 @@
   }
 
   .date {
-    width: 8em;
+    width: 7em;
+  }
+  .username {
+    width: 7em;
   }
   .duration {
-    width: 8em;
+    width: 7em;
   }
   .type {
-    width: 8em;
+    width: 7em;
   }
   .phone-number {
-    width: 8em;
+    width: 7em;
   }
   .buttons {
     width: 26em;
   }
 
   @media all and (max-width: 1200px) {
+    .col-3,
     .col-2 {
       flex-direction: column !important;
       width: 20em !important;
@@ -59,7 +63,7 @@
     }
   }
   @media all and (max-width: 800px) {
-    .col-4 {
+    .col-5 {
       flex-direction: column !important;
       width: 20em !important;
       div {
