--- a/templates/default/customer/customercallbox.html
+++ b/templates/default/customer/customercallbox.html
@@ -63,7 +63,11 @@
                                 {$call.username|default:"-"|escape}
                             </div>
                             <div class="lms-ui-tab-table-column duration">
-                                {$call.duration|duration_format}
+                                {if $call.duration == -1}
+                                    {trans("- unknown -")}
+                                {else}
+                                    {$call.duration|duration_format}
+                                {/if}
                             </div>
                         </div>
                         <div class="lms-ui-tab-table-wrapper col-2">
