--- a/templates/default/user/userinfo.html
+++ b/templates/default/user/userinfo.html
@@ -19,6 +19,19 @@
 		</TD>
 	</TR>
 	{/if}
+
+	{block name="usercallbox"}
+		{if ConfigHelper::checkPrivilege('readonly')
+			|| ConfigHelper::checkPrivilege('customer_call_view')
+			|| ConfigHelper::checkPrivilege('customer_call_management')}
+			<tr>
+				<td>
+					{include file="customer/customercallbox.html" limit=ConfigHelper::getConfig('phpui.customer_call_limit', 5)}
+				</td>
+			</tr>
+		{/if}
+	{/block}
+
 	{block name="transactions"}
 		{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
 			<TR>
