enhancement: customer call archive support added (user perspective view - missed css modifiations)

--- a/css/templates/customer/customercallbox.less
+++ b/css/templates/customer/customercallbox.less
@@ -72,4 +72,11 @@
       }
     }
   }
+
+  ul.customer-list {
+    margin-block-start: 0.1em;
+    margin-block-end: 0.1em;
+    list-style: none;
+    padding-inline-start: 1em;
+  }
 }
