--- a/templates/default/user/useredit.html
+++ b/templates/default/user/useredit.html
@@ -2,32 +2,22 @@
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
 <!--// $Id$ //-->
-<H1>{$layout.pagetitle}</H1>
-<TABLE style="width: 100%;" CELLPADDING="3">
-	<TR>
-		<TD style="width: 100%;">
-			{include file="user/usereditbox.html"}
-		</TD>
-	</TR>
+<h1>{$layout.pagetitle}</h1>
 
-	{block name="usercallbox"}
-		{if ConfigHelper::checkPrivilege('readonly')
-		|| ConfigHelper::checkPrivilege('customer_call_view')
-		|| ConfigHelper::checkPrivilege('customer_call_management')}
-			<tr>
-				<td>
-					{include file="customer/customercallbox.html" limit=ConfigHelper::getConfig('phpui.customer_call_limit', 5)}
-				</td>
-			</tr>
-		{/if}
-	{/block}
+{block name="userinfobox"}
+	{include file="user/usereditbox.html"}
+{/block}
 
-	{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
-	<TR>
-		<TD style="width: 100%;">
-			{include file="transactions.html"}
-		</TD>
-	</TR>
+{block name="usercallbox"}
+	{if ConfigHelper::checkPrivilege('readonly')
+	|| ConfigHelper::checkPrivilege('customer_call_view')
+	|| ConfigHelper::checkPrivilege('customer_call_management')}
+		{include file="customer/customercallbox.html" limit=ConfigHelper::getConfig('phpui.customer_call_limit', 5)}
 	{/if}
-</TABLE>
+{/block}
+
+{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
+		{include file="transactions.html"}
+{/if}
+
 {/block}
